Bug Fix: prevents loading spinner from disappearing early in Firefox Bug Fix: captions weren't properly escaped Bug Fix: corrects malformed JSON when is 'Link to URL' is used Bug Fix: auto-columns now accounts for galleries with less than 3 images (the default number of columns) Cleanup: whitespace Cleanup: valid JSON encoding of PHP-generated gallery JSON Cleanup: removes an 'eval' which shouldn't have been necessary (i really should have left a comment as to why it was there. oh well.) Demo: corrects 'random' param Demo: Error messages print (better to show an error than nothing at all) Proofing: adds extra escaping to image descriptions

--- a/non-WP/demo/css/photoMosaic.screen.css
+++ b/non-WP/demo/css/photoMosaic.screen.css
@@ -49,6 +49,15 @@
 	-ms-transform-origin: center center;
 	transform-origin: center center;
 
+	-webkit-transition: all 0.3s ease-out 0s;
+	-moz-transition: all 0.3s ease-out 0s;
+	-o-transition: all 0.3s ease-out 0s;
+	-ms-transition: all 0.3s ease-out 0s;
+	transition: all 0.3s ease-out 0s;
+}
+
+/* DEMO ONLY */
+.PM_csstransforms.PM_csstransitions .photoMosaic.loading ol li img {
 	-webkit-transition: all 0.5s ease-out 0.5s;
 	-moz-transition: all 0.5s ease-out 0.5s;
 	-o-transition: all 0.5s ease-out 0.5s;
